--- a/DAY03_0411/ex_img_input.html
+++ b/DAY03_0411/ex_img_input.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h2>이미지 선택</h2><hr color="blue" size="2">
-    <form action="/cgi-bin/send.py" method="get">
-        <input type="file" name="img_file" placeholder="파일 선택"><br>
+    <form action="/cgi-bin/send_img_data.py" method="post" enctype="multipart/form-data">
+        <input type="file" name="img_file" accept="image/png, image/jpeg"><br>
+
+
         <input type="text" name ="message" placeholder="전달메시지"><br>
         <input type="submit">
     </form>
